apps/public-home/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-home
  namespace: app-public-home
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: dev0.sedware.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: public-home, port: { name: http } }
    - host: www.dev0.sedware.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: public-home, port: { name: http } }
